force-app/main/default/objects/Case/fields/Efector_realizador__c.field-meta.xml
<CustomField>
    <fullName>Efector_realizador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Efector realizador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Efector</value>
        </filterItems>
        <filterItems>
            <field>Account.Es_Profesional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Estado__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filterItems>
        <infoMessage>El valor no existe o no coinciden los criterios de filtro.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reintegros</relationshipLabel>
    <relationshipName>Reintegros</relationshipName>
    <type>Lookup</type>
</CustomField>