force-app/main/default/objects/Case/fields/Empleador__c.field-meta.xml
<CustomField>
    <fullName>Empleador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Empresa</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Empleador)</relationshipLabel>
    <relationshipName>Empleador</relationshipName>
    <type>Lookup</type>
</CustomField>