force-app/main/default/objects/Case/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <formula>Account.Empresa_nombre__c &amp; &quot;,&quot;&amp; Account.Codigo_de_empresa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empresa</label>
    <type>Text</type>
</CustomField>