force-app/main/default/objects/Case/fields/Entidad__c.field-meta.xml
<CustomField>
    <fullName>Entidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entidad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consultas y Reclamos</relationshipLabel>
    <relationshipName>Casos_consultas_reclamos</relationshipName>
    <type>Lookup</type>
</CustomField>