force-app/main/default/objects/Case/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Se utiliza para saber los errores de los lotes de reintegro</description>
    <inlineHelpText>Representa el error que puede devolver Salud soft</inlineHelpText>
    <label>Error</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>