force-app/main/default/objects/Case/fields/Error_reasignacion__c.field-meta.xml
<CustomField>
    <fullName>Error_reasignacion__c</fullName>
    <description>Info de error al reasociar lote en SS</description>
    <label>Error reasignacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>