force-app/main/default/objects/Case/fields/Especialidad_y_prestador_para_agregar__c.field-meta.xml
<CustomField>
    <fullName>Especialidad_y_prestador_para_agregar__c</fullName>
    <label>Especialidad y prestador para agregar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>