force-app/main/default/objects/Case/fields/Estado_DDJJ__c.field-meta.xml
<CustomField>
    <fullName>Estado_DDJJ__c</fullName>
    <label>Estado DDJJ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DDJJ OK</fullName>
            </value>
            <value>
                <fullName>AUDITORIA</fullName>
            </value>
            <value>
                <fullName>RECHAZADA</fullName>
            </value>
            <value>
                <fullName>FIRMA O.S.</fullName>
            </value>
            <value>
                <fullName>NUEVA</fullName>
            </value>
            <value>
                <fullName>PEDIDO ESTUDIO</fullName>
            </value>
            <value>
                <fullName>CADUCA</fullName>
            </value>
            <value>
                <fullName>ASESORADA</fullName>
            </value>
            <value>
                <fullName>LEGALES</fullName>
            </value>
            <value>
                <fullName>VALORIZAR</fullName>
            </value>
            <value>
                <fullName>APROBADA CPREEX</fullName>
                <label>APROBADA C/PREEX</label>
            </value>
            <value>
                <fullName>CD ENVIADA</fullName>
            </value>
            <value>
                <fullName>TRASPASO</fullName>
            </value>
            <value>
                <fullName>EN REVISION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>