force-app/main/default/objects/Case/fields/Estado_de_documentacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_documentacion__c</fullName>
    <label>Estado de documentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitar documentacion</fullName>
            </value>
            <value>
                <fullName>Documentacion faltante</fullName>
                <label>Documentacion pedida al socio</label>
            </value>
            <value>
                <fullName>Documentacion finalizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>