force-app/main/default/objects/Case/fields/Estado_de_la_prueba_procesal__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_la_prueba_procesal__c</fullName>
    <label>Estado de la prueba</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producida</fullName>
            </value>
            <value>
                <fullName>En producción</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>