force-app/main/default/objects/Case/fields/Estado_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_solicitud__c</fullName>
    <label>Estado de solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INCOMPLETA</fullName>
            </value>
            <value>
                <fullName>COMPLETA</fullName>
            </value>
            <value>
                <fullName>TRANSFORMADA</fullName>
            </value>
            <value>
                <fullName>RECHAZADA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>