force-app/main/default/objects/Case/fields/Estado_MC__c.field-meta.xml
<CustomField>
    <fullName>Estado_MC__c</fullName>
    <label>Estado MC</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MC__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apelada</fullName>
            </value>
            <value>
                <fullName>Consentida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>