force-app/main/default/objects/Case/fields/Etapa_probatoria_administrativo__c.field-meta.xml
<CustomField>
    <fullName>Etapa_probatoria_administrativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo tipo casilla,  empleado en el objeto caso solo para tipo de registro Expedientes legales</description>
    <label>Etapa probatoria</label>
    <type>Checkbox</type>
</CustomField>