force-app/main/default/objects/Case/fields/Etapa_probatoria_procesal__c.field-meta.xml
<CustomField>
    <fullName>Etapa_probatoria_procesal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etapa probatoria</label>
    <type>Checkbox</type>
</CustomField>