force-app/main/default/objects/Case/fields/Evento_Medico__c.field-meta.xml
<CustomField>
    <fullName>Evento_Medico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Médico</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Evento_medico__c.Asociado__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Evento_medico__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>