force-app/main/default/objects/Case/fields/Existente_SS__c.field-meta.xml
<CustomField>
    <fullName>Existente_SS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existente SS</label>
    <type>Checkbox</type>
</CustomField>