force-app/main/default/objects/Case/fields/Fecha_Audiencia_conciliatoria__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Audiencia_conciliatoria__c</fullName>
    <description>Campo tipo fecha,empleado en el objeto caso solo para tipo de registro Expedientes legales</description>
    <label>Fecha Audiencia conciliatoria</label>
    <type>Date</type>
</CustomField>