force-app/main/default/objects/Case/fields/Fecha_cambio_de_estado_SS__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cambio_de_estado_SS__c</fullName>
    <label>Fecha cambio de estado SS</label>
    <type>Date</type>
</CustomField>