force-app/main/default/objects/Case/fields/Fecha_comprobante__c.field-meta.xml
<CustomField>
    <fullName>Fecha_comprobante__c</fullName>
    <label>Fecha de comprobante</label>
    <type>Date</type>
</CustomField>