force-app/main/default/objects/Case/fields/Fecha_Contesta_Demanda_informe__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Contesta_Demanda_informe__c</fullName>
    <label>Fecha Contesta Demanda/informe</label>
    <type>Date</type>
</CustomField>