force-app/main/default/objects/Case/fields/Fecha_de_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_vencimiento__c</fullName>
    <formula>Entitlement.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de vencimiento</label>
    <type>Date</type>
</CustomField>