force-app/main/default/objects/Case/fields/Fecha_error_reasignacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_error_reasignacion__c</fullName>
    <description>Fecha en la que fallo la reasignacion de lote en SS</description>
    <label>Fecha error reasignacion</label>
    <type>DateTime</type>
</CustomField>