force-app/main/default/objects/Case/fields/Fecha_Etapa_probatoria_administr__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Etapa_probatoria_administr__c</fullName>
    <description>Campo tipo fecha, empleado en el objeto caso solo para tipo de registro Expedientes legales</description>
    <label>Fecha Etapa probatoria</label>
    <type>Date</type>
</CustomField>