force-app/main/default/objects/Case/fields/Fecha_etapa_probatoria_procesal__c.field-meta.xml
<CustomField>
    <fullName>Fecha_etapa_probatoria_procesal__c</fullName>
    <label>Fecha etapa probatoria</label>
    <type>Date</type>
</CustomField>