force-app/main/default/objects/Case/fields/Fecha_firma_OS__c.field-meta.xml
<CustomField>
    <fullName>Fecha_firma_OS__c</fullName>
    <label>Fecha firma OS</label>
    <type>Date</type>
</CustomField>