force-app/main/default/objects/Case/fields/Fecha_MC__c.field-meta.xml
<CustomField>
    <fullName>Fecha_MC__c</fullName>
    <label>Fecha MC</label>
    <type>Date</type>
</CustomField>