force-app/main/default/objects/Case/fields/Fecha_prescripcion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_prescripcion__c</fullName>
    <label>Fecha prescripción</label>
    <type>Date</type>
</CustomField>