force-app/main/default/objects/Case/fields/Fecha_probable__c.field-meta.xml
<CustomField>
    <fullName>Fecha_probable__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Fecha probable</label>
    <type>Date</type>
</CustomField>