force-app/main/default/objects/Case/fields/Fecha_Recurso_de_apelacion_administrativ__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recurso_de_apelacion_administrativ__c</fullName>
    <description>Campo tipo fecha, empleado en el objeto caso solo para tipo de registro Expedientes legales</description>
    <label>Fecha Recurso de apelación</label>
    <type>Date</type>
</CustomField>