force-app/main/default/objects/Case/fields/Fecha_recurso_de_apelacion_procesal__c.field-meta.xml
<CustomField>
    <fullName>Fecha_recurso_de_apelacion_procesal__c</fullName>
    <label>Fecha recurso de apelación</label>
    <type>Date</type>
</CustomField>