force-app/main/default/objects/Case/fields/Fecha_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Resolucion__c</fullName>
    <description>Campo tipo lista, con dos posibles valores empleado en el objeto caso solo para tipo de registro Expedientes legales</description>
    <label>Fecha Resolución</label>
    <type>Date</type>
</CustomField>