force-app/main/default/objects/Case/fields/Fecha_Sentencia_de_Camara__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Sentencia_de_Camara__c</fullName>
    <label>Fecha Sentencia de Cámara</label>
    <type>Date</type>
</CustomField>