force-app/main/default/objects/Case/fields/Fecha_Sentencia_de_fondo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Sentencia_de_fondo__c</fullName>
    <label>Fecha Sentencia de fondo</label>
    <type>Date</type>
</CustomField>