force-app/main/default/objects/Case/fields/Fecha_Traslado_Demanda_Informe__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Traslado_Demanda_Informe__c</fullName>
    <label>Fecha Traslado Demanda/Informe</label>
    <type>Date</type>
</CustomField>