force-app/main/default/objects/Case/fields/Fecha_Traslado_previo_MC__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Traslado_previo_MC__c</fullName>
    <label>Fecha Traslado previo MC</label>
    <type>Date</type>
</CustomField>