force-app/main/default/objects/Case/fields/FormulatiempoSLA__c.field-meta.xml
<CustomField>
    <fullName>FormulatiempoSLA__c</fullName>
    <formula>IF(IsClosedOnCreate, &apos;&apos;, TEXT(Tiempo_SLA__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulatiempoSLA</label>
    <type>Text</type>
</CustomField>