force-app/main/default/objects/Case/fields/Grupo_de_Prestaciones__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Prestaciones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Prestaciones</label>
    <referenceTo>Grupo_de_Prestaciones__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>