force-app/main/default/objects/Case/fields/Honorarios__c.field-meta.xml
<CustomField>
    <fullName>Honorarios__c</fullName>
    <description>Campo  tipo divisa, que se usa en el objeto caso para los registros tipo Expedientes legales, en la sección &quot;datos del expediente&quot;</description>
    <label>Honorarios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>