force-app/main/default/objects/Case/fields/id_equipo_solicitante__c.field-meta.xml
<CustomField>
    <fullName>id_equipo_solicitante__c</fullName>
    <label>id equipo solicitante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>