force-app/main/default/objects/Case/fields/id_usuario_solicitante__c.field-meta.xml
<CustomField>
    <fullName>id_usuario_solicitante__c</fullName>
    <label>id usuario solicitante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>