force-app/main/default/objects/Case/fields/Importe_presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Importe_presupuesto__c</fullName>
    <label>Importe presupuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>