force-app/main/default/objects/Case/fields/Importe_reintegro__c.field-meta.xml
<CustomField>
    <fullName>Importe_reintegro__c</fullName>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>