force-app/main/default/objects/Case/fields/Indice_de_rentabilidad__c.field-meta.xml
<CustomField>
    <fullName>Indice_de_rentabilidad__c</fullName>
    <formula>Account.Indice_de_Rentabilidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Índice de rentabilidad</label>
    <type>Text</type>
</CustomField>