force-app/main/default/objects/Case/fields/Informacion_al_asociado__c.field-meta.xml
<CustomField>
    <fullName>Informacion_al_asociado__c</fullName>
    <label>Detalle de documentación faltante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>