force-app/main/default/objects/Case/fields/Informacion_completa__c.field-meta.xml
<CustomField>
    <fullName>Informacion_completa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentación completa</label>
    <type>Checkbox</type>
</CustomField>