force-app/main/default/objects/Case/fields/Informacion_de_documentacion_faltante__c.field-meta.xml
<CustomField>
    <fullName>Informacion_de_documentacion_faltante__c</fullName>
    <label>Información de documentación faltante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>