force-app/main/default/objects/Case/fields/Informe_estratagico__c.field-meta.xml
<CustomField>
    <fullName>Informe_estratagico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Informe estratégico</label>
    <referenceTo>Informe_estrategico__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>ExpedientesconinformeEST</relationshipName>
    <type>Lookup</type>
</CustomField>