force-app/main/default/objects/Case/fields/iOrigen__c.field-meta.xml
<CustomField>
    <fullName>iOrigen__c</fullName>
    <formula>CASE(
Origin ,
&quot;Telefono&quot;, IMAGE (&quot;https://acasalud--c.visualforce.com/resource/1593548760000/Telefono&quot;, &quot;Telefono&quot;,35,35),
&quot;Correo electronico&quot;, IMAGE (&quot;https://acasalud--c.visualforce.com/resource/1593012408000/Correo?&quot;, &quot;Correo electronico&quot;,35,35),
&quot;Web&quot;, IMAGE (&quot;https://acasalud--c.visualforce.com/resource/1593008946000/Web?&quot;, &quot;Web&quot;,35,35),
&quot;Whatsapp&quot;, IMAGE (&quot;https://acasalud--c.visualforce.com/resource/1593007085000/Whatsapp?&quot;, &quot;Whatsapp&quot;,35,35),
&quot;Facebook&quot;, IMAGE (&quot;https://acasalud--c.visualforce.com/resource/1593012171000/Facebook?&quot;, &quot;Facebook&quot;,35,35),
&quot;Twitter&quot;, IMAGE (&quot;https://acasalud--c.visualforce.com/resource/1593012300000/Twitter?&quot;, &quot;Twitter&quot;,35,35),
&quot;Presencial&quot;, IMAGE (&quot;https://acasalud--c.visualforce.com/resource/1593012586000/Presencial?&quot;, &quot;Presencial&quot;,35,35),
&quot;BOT&quot;, IMAGE (&quot;https://acasalud--c.visualforce.com/resource/1593007309000/Bot?&quot;, &quot;BOT&quot;,35,35),
&quot;Chat&quot;, IMAGE (&quot;https://acasalud--c.visualforce.com/resource/1593008239000/Chat?&quot;, &quot;Chat&quot;,35,35),
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origen</label>
    <type>Text</type>
</CustomField>