force-app/main/default/objects/Case/fields/Jerarquia__c.field-meta.xml
<CustomField>
    <fullName>Jerarquia__c</fullName>
    <label>Jerarquía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GEN</fullName>
                <default>true</default>
                <label>GEN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>