force-app/main/default/objects/Case/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Localidad</label>
    <referenceTo>Localidad__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>