force-app/main/default/objects/Case/fields/Localidad_nombre__c.field-meta.xml
<CustomField>
    <fullName>Localidad_nombre__c</fullName>
    <formula>Localidad__r.Nombre_de_Localidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Localidad nombre</label>
    <type>Text</type>
</CustomField>