force-app/main/default/objects/Case/fields/Lote_original__c.field-meta.xml
<CustomField>
    <fullName>Lote_original__c</fullName>
    <label>Lote original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>