force-app/main/default/objects/Case/fields/MC__c.field-meta.xml
<CustomField>
    <fullName>MC__c</fullName>
    <label>MC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>