force-app/main/default/objects/Case/fields/Medico_asignado__c.field-meta.xml
<CustomField>
    <fullName>Medico_asignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Médico asignado</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Auditor Medico</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Coordinador de Mesa de Ayuda</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Medicos</relationshipName>
    <type>Lookup</type>
</CustomField>