force-app/main/default/objects/Case/fields/Medio_de_cobro__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_cobro__c</fullName>
    <label>Medio de cobro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CBUVOL</fullName>
                <label>CBU</label>
            </value>
            <value>
                <fullName>DEBAUT</fullName>
                <label>Tarjeta o Débito por Aca</label>
            </value>
            <value>
                <fullName>OTROS</fullName>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>