force-app/main/default/objects/Case/fields/Motivo_cierre_exped_legales__c.field-meta.xml
<CustomField>
    <fullName>Motivo_cierre_exped_legales__c</fullName>
    <description>Campo  tipo picklist, que se usa en el objeto caso para los registros tipo Expedientes legales, en la sección &quot;detalles&quot;del caso&quot; y - obligatorio para el tipo “Falseamiento”</description>
    <label>Resolucion</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Cambio de condiciones</fullName>
            </value>
            <value>
                <fullName>Permanencia</fullName>
            </value>
            <value>
                <fullName>Desistimiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>