force-app/main/default/objects/Case/fields/Motivo_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Cierre__c</fullName>
    <label>Motivo de Cierre</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>