force-app/main/default/objects/Case/fields/Motivo_de_cierre_solicitudes__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_cierre_solicitudes__c</fullName>
    <label>Motivo de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cambio de plan</fullName>
            </value>
            <value>
                <fullName>Sumatoria de aportes</fullName>
            </value>
            <value>
                <fullName>Cambio de segmentos</fullName>
            </value>
            <value>
                <fullName>Pluriempleos</fullName>
            </value>
            <value>
                <fullName>Cambio de politica comercial</fullName>
                <label>Cambio de política comercial</label>
            </value>
            <value>
                <fullName>Contencion y asesoramiento</fullName>
                <label>Contención y asesoramiento</label>
            </value>
            <value>
                <fullName>Bonificacion aplicada</fullName>
                <label>Bonificación aplicada</label>
            </value>
            <value>
                <fullName>Baja procesada</fullName>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>