force-app/main/default/objects/Case/fields/N_Expte__c.field-meta.xml
<CustomField>
    <fullName>N_Expte__c</fullName>
    <description>Solo se usa para registros de expedientes legales, en la seecion &quot;datos del expediente&quot;este campo se llena de forma manual por parte del usuario</description>
    <label>N° Expte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>